--- a/index.html
+++ b/index.html
@@ -8,88 +8,92 @@
 <body>
 <div class="wrapper">
     <div class="row">
-        <div class="column column--5"></div>
-        <div class="column column--5"></div>
-        <div class="column column--5"></div>
-        <div class="column column--5"></div>
-        <div class="column column--5"></div>
+        <div class="column column--5"><div class="inner"></div></div>
+        <div class="column column--5"><div class="inner"></div></div>
+        <div class="column column--5"><div class="inner"></div></div>
+        <div class="column column--5"><div class="inner"></div></div>
+        <div class="column column--5"><div class="inner"></div></div>
+    </div>
+    <div class="row row--bublik">
+        <div class="column column--3"><div class="inner"></div></div>
+        <div class="column column--3"><div class="inner"></div></div>
     </div>
     <div class="row">
-        <div class="column column--8"></div>
-        <div class="column column--8"></div>
-        <div class="column column--8"></div>
-        <div class="column column--8"></div>
-        <div class="column column--8"></div>
-        <div class="column column--8"></div>
-        <div class="column column--8"></div>
-        <div class="column column--8"></div>
+        <div class="column column--8"><div class="inner"></div></div>
+        <div class="column column--8"><div class="inner"></div></div>
+        <div class="column column--8"><div class="inner"></div></div>
+        <div class="column column--8"><div class="inner"></div></div>
+        <div class="column column--8"><div class="inner"></div></div>
+        <div class="column column--8"><div class="inner"></div></div>
+        <div class="column column--8"><div class="inner"></div></div>
+        <div class="column column--8"><div class="inner"></div></div>
     </div>
     <div class="row">
-        <div class="column column--9"></div>
-        <div class="column column--9"></div>
-        <div class="column column--9"></div>
-        <div class="column column--9"></div>
-        <div class="column column--9"></div>
-        <div class="column column--9"></div>
-        <div class="column column--9"></div>
-        <div class="column column--9"></div>
-        <div class="column column--9"></div>
+        <div class="column column--9"><div class="inner"></div></div>
+        <div class="column column--9"><div class="inner"></div></div>
+        <div class="column column--9"><div class="inner"></div></div>
+        <div class="column column--9"><div class="inner"></div></div>
+        <div class="column column--9"><div class="inner"></div></div>
+        <div class="column column--9"><div class="inner"></div></div>
+        <div class="column column--9"><div class="inner"></div></div>
+        <div class="column column--9"><div class="inner"></div></div>
+        <div class="column column--9"><div class="inner"></div></div>
     </div>
     <div class="row">
-        <div class="column column--10"></div>
-        <div class="column column--10"></div>
-        <div class="column column--10"></div>
-        <div class="column column--10"></div>
-        <div class="column column--10"></div>
-        <div class="column column--10"></div>
-        <div class="column column--10"></div>
-        <div class="column column--10"></div>
-        <div class="column column--10"></div>
-        <div class="column column--10"></div>
+        <div class="column column--10"><div class="inner"></div></div>
+        <div class="column column--10"><div class="inner"></div></div>
+        <div class="column column--10"><div class="inner"></div></div>
+        <div class="column column--10"><div class="inner"></div></div>
+        <div class="column column--10"><div class="inner"></div></div>
+        <div class="column column--10"><div class="inner"></div></div>
+        <div class="column column--10"><div class="inner"></div></div>
+        <div class="column column--10"><div class="inner"></div></div>
+        <div class="column column--10"><div class="inner"></div></div>
+        <div class="column column--10"><div class="inner"></div></div>
     </div>
     <div class="row">
-        <div class="column column--11"></div>
-        <div class="column column--11"></div>
-        <div class="column column--11"></div>
-        <div class="column column--11"></div>
-        <div class="column column--11"></div>
-        <div class="column column--11"></div>
-        <div class="column column--11"></div>
-        <div class="column column--11"></div>
-        <div class="column column--11"></div>
-        <div class="column column--11"></div>
-        <div class="column column--11"></div>
+        <div class="column column--11"><div class="inner"></div></div>
+        <div class="column column--11"><div class="inner"></div></div>
+        <div class="column column--11"><div class="inner"></div></div>
+        <div class="column column--11"><div class="inner"></div></div>
+        <div class="column column--11"><div class="inner"></div></div>
+        <div class="column column--11"><div class="inner"></div></div>
+        <div class="column column--11"><div class="inner"></div></div>
+        <div class="column column--11"><div class="inner"></div></div>
+        <div class="column column--11"><div class="inner"></div></div>
+        <div class="column column--11"><div class="inner"></div></div>
+        <div class="column column--11"><div class="inner"></div></div>
     </div><div class="row">
-        <div class="column column--12"></div>
-        <div class="column column--12"></div>
-        <div class="column column--12"></div>
-        <div class="column column--12"></div>
-        <div class="column column--12"></div>
-        <div class="column column--12"></div>
-        <div class="column column--12"></div>
-        <div class="column column--12"></div>
-        <div class="column column--12"></div>
-        <div class="column column--12"></div>
-        <div class="column column--12"></div>
-        <div class="column column--12"></div>
+        <div class="column column--12"><div class="inner"></div></div>
+        <div class="column column--12"><div class="inner"></div></div>
+        <div class="column column--12"><div class="inner"></div></div>
+        <div class="column column--12"><div class="inner"></div></div>
+        <div class="column column--12"><div class="inner"></div></div>
+        <div class="column column--12"><div class="inner"></div></div>
+        <div class="column column--12"><div class="inner"></div></div>
+        <div class="column column--12"><div class="inner"></div></div>
+        <div class="column column--12"><div class="inner"></div></div>
+        <div class="column column--12"><div class="inner"></div></div>
+        <div class="column column--12"><div class="inner"></div></div>
+        <div class="column column--12"><div class="inner"></div></div>
     </div>
     <div class="row">
-        <div class="column column--4"></div>
-        <div class="column column--4"></div>
-        <div class="column column--4"></div>
-        <div class="column column--4"></div>
+        <div class="column column--4"><div class="inner"></div></div>
+        <div class="column column--4"><div class="inner"></div></div>
+        <div class="column column--4"><div class="inner"></div></div>
+        <div class="column column--4"><div class="inner"></div></div>
     </div>
     <div class="row">
-        <div class="column column--2"></div>
-        <div class="column column--2"></div>
+        <div class="column column--2"><div class="inner"></div></div>
+        <!--<div class="column column&#45;&#45;2"></div>-->
     </div>
     <div class="row">
-        <div class="column column--6"></div>
-        <div class="column column--6"></div>
-        <div class="column column--6"></div>
-        <div class="column column--6"></div>
-        <div class="column column--6"></div>
-        <div class="column column--6"></div>
+        <div class="column column--6"><div class="inner"></div></div>
+        <div class="column column--6"><div class="inner"></div></div>
+        <div class="column column--6"><div class="inner"></div></div>
+        <div class="column column--6"><div class="inner"></div></div>
+        <div class="column column--6"><div class="inner"></div></div>
+        <div class="column column--6"><div class="inner"></div></div>
     </div>
 </div>
 <section>
