--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<div class="wrapper">
+<div class="wrapper"><a href="page.html">
     <div class="row">
         <div class="column column--5"><div class="inner"></div></div>
         <div class="column column--5"><div class="inner"></div></div>
@@ -95,6 +95,7 @@
         <div class="column column--6"><div class="inner"></div></div>
         <div class="column column--6"><div class="inner"></div></div>
     </div>
+</a>
 </div>
 <section>
 
