--- a/page.html
+++ b/page.html
@@ -12,48 +12,48 @@
         <div class="row">
             <div class="col1-2">
                 <a href="https://placeholder.com">
-                    <img src="https://via.placeholder.com/600x150/AFDFBF">
+                    <img src="https://via.placeholder.com/600x150/AFDFBF" alt="size">
                 </a>
             </div>
             <div class="col1-2">
                 <a href="https://placeholder.com">
-                    <img src="https://via.placeholder.com/600x150/68C5B8">
+                    <img src="https://via.placeholder.com/600x150/68C5B8" alt="size">
                 </a>
             </div>
         </div>
         <div class="row">
             <div class="col1-2">
                 <a href="https://placeholder.com">
-                    <img src="https://via.placeholder.com/600x320/FA688A">
+                    <img src="https://via.placeholder.com/600x320/FA688A" alt="size">
                 </a>
             </div>
             <div class="col1-2">
                 <div class="insiderow">
                     <div class="col1-3">
                         <a href="https://placeholder.com">
-                            <img src="https://via.placeholder.com/200x165/8A95EF">
+                            <img src="https://via.placeholder.com/200x165/8A95EF" alt="size">
                         </a>
                     </div>
                     <div class="col1-3">
                         <a href="https://placeholder.com">
-                            <img src="https://via.placeholder.com/200x165/8A95EF">
+                            <img src="https://via.placeholder.com/200x165/8A95EF" alt="size">
                         </a>
                     </div>
                     <div class="col1-3">
                         <a href="https://placeholder.com">
-                            <img src="https://via.placeholder.com/200x165/8A95EF">
+                            <img src="https://via.placeholder.com/200x165/8A95EF" alt="size">
                         </a>
                     </div>
                 </div>
                 <div class="insiderow">
                     <div class="col1-2">
                         <a href="https://placeholder.com">
-                            <img src="https://via.placeholder.com/300x150/FFC569">
+                            <img src="https://via.placeholder.com/300x150/FFC569" alt="size">
                         </a>
                     </div>
                     <div class="col1-2">
                         <a href="https://placeholder.com">
-                            <img src="https://via.placeholder.com/300x150/FFC569">
+                            <img src="https://via.placeholder.com/300x150/FFC569" alt="size">
                         </a>
                     </div>
                 </div>
@@ -62,39 +62,39 @@
         <div class="row">
             <div class="col1-3">
                 <a href="https://placeholder.com">
-                    <img src="https://via.placeholder.com/400x185/588CC7">
+                    <img src="https://via.placeholder.com/400x185/588CC7" alt="size">
                 </a>
             </div>
             <div class="col1-3">
                 <a href="https://placeholder.com">
-                    <img src="https://via.placeholder.com/400x185/588CC7">
+                    <img src="https://via.placeholder.com/400x185/588CC7" alt="size">
                 </a>
             </div>
             <div class="col1-6">
                 <a href="https://placeholder.com">
-                    <img src="https://via.placeholder.com/200x195/588CC7">
+                    <img src="https://via.placeholder.com/200x195/588CC7" alt="size">
                 </a>
             </div>
             <div class="col1-6">
                 <a href="https://placeholder.com">
-                    <img src="https://via.placeholder.com/200x195/588CC7">
+                    <img src="https://via.placeholder.com/200x195/588CC7" alt="size">
                 </a>
             </div>
         </div>
         <div class="row">
             <div class="col1-6">
                 <a href="https://placeholder.com">
-                    <img src="https://via.placeholder.com/200x145/6652AD">
+                    <img src="https://via.placeholder.com/200x145/6652AD" alt="size">
                 </a>
             </div>
             <div class="col1-2">
                 <a href="https://placeholder.com">
-                    <img src="https://via.placeholder.com/600x135/6652AD">
+                    <img src="https://via.placeholder.com/600x135/6652AD" alt="size">
                 </a>
             </div>
             <div class="col1-3">
                 <a href="https://placeholder.com">
-                    <img src="https://via.placeholder.com/400x135/6652AD">
+                    <img src="https://via.placeholder.com/400x135/6652AD" alt="size">
                 </a>
             </div>
         </div>
