--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
         <div class="column column--5"><div class="inner"></div></div>
         <div class="column column--5"><div class="inner"></div></div>
         <div class="column column--5"><div class="inner"></div></div>
-    </div>
-    <div class="row row--bublik">
+    </div>    <div class="row row--bublik">
         <div class="column column--3"><div class="inner"></div></div>
         <div class="column column--3"><div class="inner"></div></div>
     </div>
