--- a/page.html
+++ b/page.html
@@ -29,29 +29,29 @@
             </div>
             <div class="col1-2">
                 <div class="insiderow">
-                    <div class="col1-3">
+                    <div class="insidecol1-3">
                         <a href="https://placeholder.com">
                             <img src="https://via.placeholder.com/200x165/8A95EF" alt="size">
                         </a>
                     </div>
-                    <div class="col1-3">
+                    <div class="insidecol1-3">
                         <a href="https://placeholder.com">
                             <img src="https://via.placeholder.com/200x165/8A95EF" alt="size">
                         </a>
                     </div>
-                    <div class="col1-3">
+                    <div class="insidecol1-3">
                         <a href="https://placeholder.com">
                             <img src="https://via.placeholder.com/200x165/8A95EF" alt="size">
                         </a>
                     </div>
                 </div>
                 <div class="insiderow">
-                    <div class="col1-2">
+                    <div class="insidecol1-2">
                         <a href="https://placeholder.com">
                             <img src="https://via.placeholder.com/300x150/FFC569" alt="size">
                         </a>
                     </div>
-                    <div class="col1-2">
+                    <div class="insidecol1-2">
                         <a href="https://placeholder.com">
                             <img src="https://via.placeholder.com/300x150/FFC569" alt="size">
                         </a>
